--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           expo-version: 3.x
           expo-token: ${{ secrets.EXPO_TOKEN }}
+          expo-cache: true
       - run: yarn install
       - run: expo publish --release-channel=pr-${{ github.event.number }}
       - uses: unsplash/comment-on-pr@master
