--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject",
     "lint": "eslint App.tsx",
     "fix": "eslint App.tsx --fix"
+    "test": "jest"
   },
   "dependencies": {
     "expo": "~39.0.2",
@@ -19,7 +20,7 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
-    "@types/expo": "^33.0.1",
+    "@types/jest": "^26.0.15",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
@@ -34,7 +35,21 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-native": "^3.10.0",
     "prettier": "^2.1.2",
+    "@types/react-test-renderer": "^16.9.3",
+    "jest-expo": "^39.0.0",
+    "react-test-renderer": "^17.0.1",
     "typescript": "~3.9.5"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
+  }
 }
