--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,33 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
+    /* Basic Options */
+    "lib": [
+      "dom",
+      "esnext"
+    ],
     "jsx": "react-native",
-    "lib": ["dom", "esnext"],
-    "moduleResolution": "node",
     "noEmit": true,
-    "skipLibCheck": true,
+    /* Module Resolution Options */
+    "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "strict": true
-  }
+    "skipLibCheck": true,
+    /* Strict Type-Checking Options */
+    "strict": true,
+    "noImplicitAny": true /* Raise error on expressions and declarations with an implied 'any' type. */,
+    "strictNullChecks": true /* Enable strict null checks. */,
+    "strictFunctionTypes": true /* Enable strict checking of function types. */,
+    "strictPropertyInitialization": true /* Enable strict checking of property initialization in classes. */,
+    "noImplicitThis": true /* Raise error on 'this' expressions with an implied 'any' type. */,
+    "alwaysStrict": true /* Parse in strict mode and emit "use strict" for each source file. */,
+    /* Additional Checks */
+    "noUnusedLocals": true /* Report errors on unused locals. */,
+    "noUnusedParameters": true /* Report errors on unused parameters. */,
+    "noImplicitReturns": true /* Report error when not all code paths in function return a value. */,
+    "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
+    "forceConsistentCasingInFileNames": true,
+  },
+  "include": [
+    "App.tsx",
+    "src"
+  ]
 }
